Before irreversible part of big refactor