@@ -19,7 +19,7 @@
             <dependency>
                 <groupId>io.smallrye.common</groupId>
                 <artifactId>smallrye-common-bom</artifactId>
-                <version>2.9.0-SNAPSHOT</version>
+                <version>2.13.7</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>io.github.dmlloyd</groupId>
             <artifactId>jdk-classfile-backport</artifactId>
-            <version>24.cr2</version>
+            <version>24.0</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.logging</groupId>
@@ -56,10 +56,20 @@
     <build>
         <plugins>
             <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.5.2</version>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.14.1</version>
                 <configuration>
-                    <argLine>--add-opens java.base/java.lang=io.github.dmlloyd.modules --add-exports java.base/jdk.internal.module=io.github.dmlloyd.modules</argLine>
+                    <compilerArgs>
+                        <argument>--add-exports</argument>
+                        <argument>java.base/jdk.internal.module=io.github.dmlloyd.modules</argument>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.4</version>
+                <configuration>
+                    <argLine>--add-exports java.base/jdk.internal.module=io.github.dmlloyd.modules</argLine>
                 </configuration>
             </plugin>
             <plugin>
